--- a/statics/style.css
+++ b/statics/style.css
@@ -13,6 +13,8 @@ body {
     background-color: white;
     border-style: solid;
     border-color: #c4e8ee;
+    width: 100%;
+    height: 250px;
 }
 .container {
   margin-top: 3%;
